defer属性を利用

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>【エクササイズ】Fetch APIを使ってクイズアプリを作る</title>
   <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
 </head>
 <body>
   <h1>Quiz App</h1>
@@ -13,7 +14,5 @@
     <p id="result"></p>
     <button id="restart-button">Restart</button>
   </div>
-
-  <script src="main.js"></script>
 </body>
 </html>
